--- a/index.css
+++ b/index.css
@@ -29,6 +29,9 @@
 	justify-content: space-between;
 	padding: 20px;
   }
+  #canvas {
+	display: none;
+  }
   
 /*  #weather-widget h2 {
 	font-size: 1.2em;
